refactor: split self-evolving and client modules